Fix white space around hr element
These space should be as large as the height of 2 lines.

--- a/src/css/core.css
+++ b/src/css/core.css
@@ -67,8 +67,8 @@ p {
 
 hr {
 	border-width: 0;
-	margin-bottom: 0;
-	margin-top: var(--space-default);
+	margin-bottom: var(--space-large);
+	margin-top: var(--space-large);
 	text-align: center;
 }
 
